force-app/main/default/objects/Account/fields/Contrat_de_support__c.field-meta.xml
<CustomField>
    <fullName>Contrat_de_support__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Case à cocher contrat de support</description>
    <inlineHelpText>Votre compte contient-il un contrat de support ?</inlineHelpText>
    <label>Contrat de support</label>
    <type>Checkbox</type>
</CustomField>