force-app/main/default/objects/Account/fields/Date_expiration_contrat_support__c.field-meta.xml
<CustomField>
    <fullName>Date_expiration_contrat_support__c</fullName>
    <label>Date d&apos;expiration du contrat de support</label>
    <type>Date</type>
</CustomField>