force-app/main/default/objects/Account/fields/PicklistChoixLigne__c.field-meta.xml
<CustomField>
    <fullName>PicklistChoixLigne__c</fullName>
    <label>PicklistContact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>--Vide--</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>