force-app/main/default/objects/Account/fields/R_gion__c.field-meta.xml
<CustomField>
    <fullName>R_gion__c</fullName>
    <label>Région</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>R_gion</valueSetName>
    </valueSet>
</CustomField>