force-app/main/default/objects/Account/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>R_gion__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Asie de l&apos;Est</fullName>
            </value>
            <value>
                <fullName>Océanie</fullName>
            </value>
            <value>
                <fullName>Asie du Sud-Est</fullName>
            </value>
            <value>
                <fullName>Afrique</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Moyen-Orient</fullName>
            </value>
            <value>
                <fullName>Royaume-Uni</fullName>
            </value>
            <value>
                <fullName>Irlande</fullName>
            </value>
            <value>
                <fullName>Caraïbes</fullName>
            </value>
            <value>
                <fullName>Amérique centrale</fullName>
            </value>
            <value>
                <fullName>Amérique du Sud</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>