force-app/main/default/objects/Account/recordTypes/RecordType_Concurrent.recordType-meta.xml
<RecordType>
    <fullName>RecordType_Concurrent</fullName>
    <active>true</active>
    <label>RecordType Concurrent</label>
</RecordType>