force-app/main/default/objects/Account/validationRules/ExpirationRule.validationRule-meta.xml
<ValidationRule>
    <fullName>ExpirationRule</fullName>
    <active>true</active>
    <description>Assure que tous les utilisateurs saisissent la date d&apos;expiration du contrat de support lorsque la case détenteur d&apos;un contrat de support est cochée sur un compte.</description>
    <errorConditionFormula>AND(Contrat_de_support__c=True, ISBLANK(Date_expiration_contrat_support__c))</errorConditionFormula>
    <errorMessage>Veuillez saisir la date d&apos;expiration du contrat de support</errorMessage>
</ValidationRule>